fix(frontend): Add overflow: hidden in html

--- a/frontend/src/scss/global.scss
+++ b/frontend/src/scss/global.scss
@@ -6,6 +6,10 @@
     src: local("SourceCodePro"), url("/public/fonts/SourceCodePro-Regular.ttf");
 }
 
+html {
+    overflow: hidden !important;
+}
+
 body {
     font-family: "Tahoma", sans-serif;
 }
